--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Derek Carlos
-  email: example@domain.com # change to your email address
+  email: blog@derek.ph # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/dorkcereals # change to your twitter homepage
